// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCarousel should render correctly 1`] = `
<div
  className="bpk-carousel"
>
  <div>
    <button
      className="bpk-button bpk-button--icon-only"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1.125rem",
            "marginTop": "0.1875rem",
            "verticalAlign": "top",
          }
        }
      >
        <svg
          className="bpk-icon--rtl-support"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.6 4.5L3.9 9.9c-.4.4-.7.9-.8 1.5-.1.2-.1.4-.1.6 0 .2 0 .4.1.6.1.6.4 1.1.8 1.5l5.7 5.3c.8.8 2.1.7 2.8-.1.8-.8.7-2.1-.1-2.8L9.6 14H19c1.1 0 2-.9 2-2s-.9-2-2-2H9.6l2.7-2.5c.5-.4.7-1 .7-1.5s-.2-1-.5-1.4c-.8-.8-2.1-.8-2.9-.1z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    className="bpk-carousel__wrapper"
  >
    <div
      className="bpk-carousel__container"
      style={
        Object {
          "marginLeft": "calc((-0px) * 0)",
        }
      }
    >
      <div>
        <div
          className="bpk-carousel__item"
        >
          <div>
            Item 2
          </div>
        </div>
      </div>
      <div>
        <div
          className="bpk-carousel__item"
        >
          <div>
            Item 3
          </div>
        </div>
      </div>
      <div>
        <div
          className="bpk-carousel__item"
        >
          <div>
            Item 4
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="bpk-button bpk-button--icon-only"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1.125rem",
            "marginTop": "0.1875rem",
            "verticalAlign": "top",
          }
        }
      >
        <svg
          className="bpk-icon--rtl-support"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7s0-.4-.1-.6c-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`BpkCarousel should support custom class names 1`] = `
<div
  className="bpk-carousel custom-classname"
>
  <div>
    <button
      className="bpk-button bpk-button--icon-only"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1.125rem",
            "marginTop": "0.1875rem",
            "verticalAlign": "top",
          }
        }
      >
        <svg
          className="bpk-icon--rtl-support"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.6 4.5L3.9 9.9c-.4.4-.7.9-.8 1.5-.1.2-.1.4-.1.6 0 .2 0 .4.1.6.1.6.4 1.1.8 1.5l5.7 5.3c.8.8 2.1.7 2.8-.1.8-.8.7-2.1-.1-2.8L9.6 14H19c1.1 0 2-.9 2-2s-.9-2-2-2H9.6l2.7-2.5c.5-.4.7-1 .7-1.5s-.2-1-.5-1.4c-.8-.8-2.1-.8-2.9-.1z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    className="bpk-carousel__wrapper"
  >
    <div
      className="bpk-carousel__container"
      style={
        Object {
          "marginLeft": "calc((-0px) * 0)",
        }
      }
    >
      <div>
        <div
          className="bpk-carousel__item"
        >
          <div>
            Item 2
          </div>
        </div>
      </div>
      <div>
        <div
          className="bpk-carousel__item"
        >
          <div>
            Item 3
          </div>
        </div>
      </div>
      <div>
        <div
          className="bpk-carousel__item"
        >
          <div>
            Item 4
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="bpk-button bpk-button--icon-only"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1.125rem",
            "marginTop": "0.1875rem",
            "verticalAlign": "top",
          }
        }
      >
        <svg
          className="bpk-icon--rtl-support"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.4 19.5l5.7-5.3c.4-.4.7-.9.8-1.5.1-.3.1-.5.1-.7s0-.4-.1-.6c-.1-.6-.4-1.1-.8-1.5l-5.7-5.3c-.8-.8-2.1-.7-2.8.1-.8.8-.7 2.1.1 2.8l2.7 2.5H5c-1.1 0-2 .9-2 2s.9 2 2 2h9.4l-2.7 2.5c-.5.4-.7 1-.7 1.5s.2 1 .5 1.4c.8.8 2.1.8 2.9.1z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
